[package]
build = './common/build/build.rs'
description = 'Overlay protocol library'
edition = '2021'
name = 'overlay'
version = '0.7.13'

[dependencies]
async-trait = '0.1'
enum-as-inner = '=0.5.1'
failure = '0.1'
hex = '0.4'
log = '0.4'
num-traits = '0.2'
rand = '0.7'
adnl = { features = [ 'node' ], git = 'https://github.com/tonlabs/ever-adnl.git', tag = 'pre_feature-common-message' }
lockfree = { git = 'https://github.com/tonlabs/lockfree.git' }
rldp = { git = 'https://github.com/tonlabs/ever-rldp.git', tag = 'pre_feature-common-message' }
tokio = { features = [ 'rt-multi-thread' ], version = '1.5' }
ton_api = { git = 'https://github.com/tonlabs/ever-tl.git', package = 'ton_api', tag = 'pre_feature-common-message' }
ton_block = { git = 'https://github.com/tonlabs/ever-block.git', tag = 'pre_feature-common-message' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = 'pre_feature-common-message' }

[features]
dump = [ 'adnl/dump' ]
telemetry = [ 'adnl/telemetry', 'rldp/telemetry' ]

