[package]
build = './common/build/build.rs'
description = 'Overlay protocol library'
edition = '2021'
name = 'overlay'
version = '0.7.19'

[dependencies]
adnl = { features = [ 'node' ], git = 'https://github.com/tonlabs/ever-adnl.git', tag = '0.9.22' }
async-trait = '0.1'
enum-as-inner = '=0.5.1'
failure = '0.1'
hex = '0.4'
lockfree = { git = 'https://github.com/tonlabs/lockfree.git' }
log = '0.4'
num-traits = '0.2'
rand = '0.7'
rldp = { git = 'https://github.com/tonlabs/ever-rldp.git', tag = '0.8.15' }
tokio = { features = [ 'rt-multi-thread' ], version = '1.5' }
ton_api = { git = 'https://github.com/tonlabs/ever-tl.git', package = 'ton_api', tag = '0.3.59' }
ton_block = { git = 'https://github.com/tonlabs/ever-block.git', tag = '1.9.122' }
ton_types = { git = 'https://github.com/tonlabs/ever-types.git', tag = '2.0.32' }

[features]
dump = [ 'adnl/dump' ]
telemetry = [ 'adnl/telemetry', 'rldp/telemetry' ]

